org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/ShadowingTests_SameNamesBadCaseWithAlias_FT.alf.xt
/* 
XPECT_SETUP org.omg.sysml.xpect.tests.validation.SysMLValidationTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.alf"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.alf"}
			}
		}
	}
END_SETUP 
*/

package test{
	feature A{
		feature a1{}
	}
	feature B : A{
		feature A{
			feature a2{}
		}
		/* XPECT errors at A::a1 ---
		    "Couldn't resolve reference to Type 'A::a1'." at "A::a1"
		--- */
		feature b : A::a1;
	}
}
