org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/failing/ShadowingTests_SameNamesBadCaseWithAlias_Rdef.alf.xt
/* 
XPECT_SETUP org.omg.sysml.xpect.tests.validation.SysMLValidationTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.alf"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.alf"}
			}
		}
	}
END_SETUP 
*/

package test{
	feature A{
		feature a1{}
	}
	feature B redefines A{
		feature A{
			feature a2{}
		}
		/* XPECT errors at A::a1 ---
		    "Couldn't resolve reference to Feature 'A::a1'." at "A::a1"
			"The feature 'type' of 'org.omg.sysml.lang.sysml.impl.FeatureImpl@6f3e19b3{file:/C:/install_dir/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/a_ShadowingTests_SameNamesBadCaseWithAlias_Rdef.alf.xt#//@ownedRelationship.1/@ownedRelatedElement.0/@ownedRelationship.2/@ownedRelatedElement.0}' with 0 values must have at least 1 values" at "b redefines A::a1;"
		--- */
		feature b redefines A::a1;
	}
}
